--- a/src/main/resources/static/empresa.html
+++ b/src/main/resources/static/empresa.html
@@ -128,7 +128,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-        Projeto Antenas
+        <span>Projeto Antenas</span>
+        <span data-empresario-nome></span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Alterna navegação">
@@ -138,6 +139,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#" data-toggle="modal" data-target="#modal-novo-projeto">Adicionar projeto</a>
+          </li>
+          <li class="nav-item">
+            <a data-empresario-logout class="nav-link" href="#">Sair</a>
           </li>
         </ul>
       </div>
