Corrigindo bug do component

--- a/timeline-component/demo/index.html
+++ b/timeline-component/demo/index.html
@@ -21,6 +21,10 @@
   </style>
 </head>
 <body>
+  <section data-timeline="1o23u1io2jdpasd"></section>
+  <section data-timeline="pjpinih321djs"></section>
+  <section data-timeline="ioeoqromksc812"></section>
+  <section data-timeline="qowiu3oiqew521"></section>
   <section data-timeline="opijsdonaxsd512"></section>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
